--- a/style.css
+++ b/style.css
@@ -1,81 +1,135 @@
-@charset  'utf-8';
-@import url('https //fonts.googleapis.com/css2?family=bebas=neve&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap&#39');
 @font-face {
-    font-family:'idroid';
-    src: url(fontes/idroid.otf);
+    font-family: Idroid;
+    src: url('');
 }
 
-:root{
-    --cor0:#195935;
-    --cor1:#84e1ad;
-    --cor2:#3DD984;
+:root {
+    --cor1: #C5EBD6;
+    --cor2: #83E1AD;
+    --cor3: #3DDC84;
+    --cor4: #2FA866;
+    --cor5: #063D1E;
 
+    
+    --fonte-destaque: 'Bebas Neue', sans-serif;
+    --fonte-padrao: 'arial';
+    --fonte-titulo: 'Idroid';
 
-    --fonte-padrao:arial, helvetica, sans-serif;
-    --fonte-especial:'bebas neve', sansz-serif;
-    --fonte-android:'idroid', sansz-serif;
+    --box-shadow: 3px 3px 3px rgb(99, 95, 95);
+    --text-shadow: 1px 2px 3px rgb(99, 95, 95);
+
+    --link-externo: '\00a0\1F517';
 }
 
-*{
-    padding: 0px;
-    margin: 0px;
+* {
+    padding: 0%;
+    text-decoration: none;
+    text-indent: 0%;
+    margin: 0%;
+    line-height: 1.2em;
+    font-size: 18px;
     font-family: var(--fonte-padrao);
+    font-weight: 100;
+}
+
+body {
+    background-color: var(--cor2);
+    display: block;
+}
+
+header {
+    height: 150px;
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    text-align: center;
+    color: white;
 } 
 
-body{
-    background-color: var(--cor1);
+#principal {
+    font-family: var(--fonte-destaque);
+    font-size: 40px;
+    padding-top: 20px;
+    font-weight: 100;
+    text-shadow: var(--text-shadow);
+    letter-spacing: 0px;
 }
 
-header{
-    background-image:linear-gradient(tobottom,var(--cor2). var(var(--cor0)));
-    color:white;
-    padding:50px;
-    tex-align:center ;
+#subtitulo {
+    font-family: var(--fonte-padrao);
+    padding-top: 20px;
+    text-shadow: var(--text-shadow);
+    text-align: center;
 }
 
 nav {
-    background-color: var(--cor0);
+    background-color: var(--cor5);
+    color: white;
+    height: 25px;
+    padding: 5px;
+    display: block;
+    box-shadow: var(--box-shadow)
 }
-nav {
-    color:white;
-    text-decor
-    padding:0px 20px;
-}
-nav a :hover{
-    background-color:var(--cor2);
-    color:var(--cor0);
-}
-nav{
 
+.links_principais, .links_principais:visited {
+    color: white;
+    padding-left: 20px;
 }
-main{
-    box-align: center;
-    background-color: white;
-    max-width: 70%;
+
+.links_principais:hover {
+    color: var(--cor5);
+    transition-duration: 0.5s;
+}
+
+.links, .links:visited {
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+.links:hover {
+    color: var(--cor5);
+    transition-duration: 0.5s;
+}
+
+main {
+    min-width: 400px;
+    max-width: 800px;
     margin: auto;
+    margin-bottom: 10px;
+    background-color: white;
+    display: block;
+    padding: 15px;
+    box-shadow: var(--box-shadow);
+    border-radius: 0px 0px 20px 20px;
 }
-h1{
-    font-family: "idroid", arial, sans-serif;
-    color: #195935;
-    font-size: xx-large;
-    margin: 50px;
+
+.links:after {
+    content: var(--link-externo);
 }
-h2{
-    font-family:"idroid", arial, sans-serif; 
-    color:#195935;
-    font-size: xx-large;
-    background: linear-gradient(to right, #c4ead5, transparent);
-    margin: 50px;
+
+#h1 {
+    font-size: 30px;
+    font-family: var(--fonte-titulo);
+    color: var(--cor5);
 }
-p{
-    margin:55px;
-    font-size: medium;
-    text-indent: 15px;
+
+.h2 {
+    font-family: var(--fonte-titulo);
+    font-size: 25px;
+    color: var(--cor4);
+    background-image: linear-gradient(to right, var(--cor1), white);
+    border-radius: 10px 0px 0px 10px;
+    text-indent: 10px;
 }
-img{
-    max-width: 100%;
-    height: auto;
-    display:block;
-    margin:0 auto;
-    box-sizing: border-box;
+
+#bugdroid {
+    text-align: center;
+}
+
+div {
+    width: 830px;
+    height: 450px;
+    background-color: var(--cor5);
+    display: block;
+    margin-bottom: 15px;
+    margin: 0px -15px 15px -15px;
 }
